objects/Item_Update__c.object
<CustomObject>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <formula>CASE(Supplier_Currency__c, &quot;AUD&quot;, 0.86, &quot;CAD&quot;, 1.00, &quot;EUR&quot;, 1.32, &quot;GBP&quot;, 1.65, &quot;NZD&quot;, 0.80, &quot;USD&quot;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Static FY exchange rate, based on the Supplier&apos;s currency type.</inlineHelpText>
        <label>IIP: Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exec_Approved_Timestamp__c</fullName>
        <label>Exec Approved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Executive_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive__c</fullName>
        <label>Executive Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FOB_Cs__c</fullName>
        <label>IIP: Warehouse / Cs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_City__c</fullName>
        <label>IIP: Warehouse Pickup City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_Name__c</fullName>
        <label>IIP: Warehouse Pickup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_Postal__c</fullName>
        <label>IIP: Warehouse Pickup Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_State__c</fullName>
        <label>IIP: Warehouse Pickup State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_Street__c</fullName>
        <label>IIP: Warehouse Pickup Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB_Pickup_Warehouse__c</fullName>
        <description>This picklist drives the address fields for the FOB Warehouse Pickup location which is needed for down stream systems.</description>
        <inlineHelpText>To be completed by Operations: This picklist drives the address fields for the FOB Warehouse Pickup location which is needed for down stream systems.</inlineHelpText>
        <label>IIP: Warehouse Pickup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Western Carriers NJ</fullName>
                </value>
                <value>
                    <fullName>Western Wine Services CA</fullName>
                </value>
                <value>
                    <fullName>Wine Service Co-Op CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fanciful_Name_Legal__c</fullName>
        <label>IIP: Fanciful Name (Legal)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fermentation__c</fullName>
        <label>IIP: Fermentation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Availability_Date__c</fullName>
        <label>IIP: First Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_or_Variable_Lead_Time__c</fullName>
        <label>Fixed or Variable Lead Time</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flavors__c</fullName>
        <label>IIP: Flavors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tea</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Cranberry</fullName>
                </value>
                <value>
                    <fullName>Tar</fullName>
                </value>
                <value>
                    <fullName>Floral</fullName>
                </value>
                <value>
                    <fullName>Licorice</fullName>
                </value>
                <value>
                    <fullName>Truffle</fullName>
                </value>
                <value>
                    <fullName>Toasty</fullName>
                </value>
                <value>
                    <fullName>Mineral</fullName>
                </value>
                <value>
                    <fullName>Cherry</fullName>
                </value>
                <value>
                    <fullName>Pine</fullName>
                </value>
                <value>
                    <fullName>Cigar</fullName>
                </value>
                <value>
                    <fullName>Berry</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Herbs</fullName>
                </value>
                <value>
                    <fullName>Nutty</fullName>
                </value>
                <value>
                    <fullName>Vanilla</fullName>
                </value>
                <value>
                    <fullName>Raspberry</fullName>
                </value>
                <value>
                    <fullName>Strawberry</fullName>
                </value>
                <value>
                    <fullName>Fruity</fullName>
                </value>
                <value>
                    <fullName>Spices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frontline_Retail_Cost_Case__c</fullName>
        <description>Retail cost without discounts</description>
        <inlineHelpText>Does not include any split case fees, only the retail cost per whole case</inlineHelpText>
        <label>IIP: Everyday Retail Cost Per Case $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Vineyard record to pull in the Geography data.</description>
        <inlineHelpText>Lookup to the Vineyard record to pull in the Geography data. Please use the Search function to find correct record.</inlineHelpText>
        <label>IIP: Geography/Taxonomy</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipName>Item_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Gift Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade_Potency_Pricing__c</fullName>
        <label>Grade Potency Pricing</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Warehouse_Process_1__c</fullName>
        <label>Group Warehouse Process - 1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harmonized_Code__c</fullName>
        <label>IIP: Harmonized Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harvest_Date__c</fullName>
        <description>Harvest date of the crop for wine products</description>
        <inlineHelpText>Date the grapes were harvested - estimate to the closest day if possible.</inlineHelpText>
        <label>IIP: Harvest Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IIP_CIF_Upcharge__c</fullName>
        <description>CIF Upcharge for this particular item.  Calculated via Trigger and reference to CIF Upcharge Reference Table object.</description>
        <inlineHelpText>CIF Upcharge is based on country code, pack size, &amp; item size. If the charge looks incorrect, please contact Operations to verify.</inlineHelpText>
        <label>IIP: PI: New CIF Upcharge</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IIP_Cork_Type__c</fullName>
        <description>Type of cork closure, based on SGWS values.</description>
        <inlineHelpText>Base Unit Closure Type must be &quot;Cork&quot; for these values to be valid, otherwise NA. Type of cork closure, based on SGWS values.</inlineHelpText>
        <label>IIP: Cork Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Closure_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Cork_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IIP_Geography_Code_Country__c</fullName>
        <formula>Geography__r.Code_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP:Geography_Code_Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IIP_Pallet_Height_in_inches__c</fullName>
        <label>IIP Pallet Height (in inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IIP_Pallet_Length_in_inches__c</fullName>
        <label>IIP Pallet Length (in inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IIP_Pallet_Width_in_inches__c</fullName>
        <label>IIP Pallet Width (in inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IIP_Pre_Sales_Discounted_Price__c</fullName>
        <description>Calculation: New item base price - presale discount</description>
        <formula>pi_dp_New_Base_Price__c - Presale_Price_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated value: Pre-Sales Discounted Price = New Item Base Price - Presale Discount</inlineHelpText>
        <label>IIP: Pre-Sales Discounted Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IIP_Warehouse_Upcharge__c</fullName>
        <description>Warehouse Upcharge for this particular item. Calculated via Trigger and reference to Warehouse Upcharge Reference Table object.</description>
        <inlineHelpText>Warehouse Upcharge is based on country code, pack size, item size &amp; beverage code. If the charge looks incorrect, please contact Operations to verify.</inlineHelpText>
        <label>IIP: PI: New Warehouse Upcharge</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IU_Type__c</fullName>
        <label>What would you like to do?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Item</fullName>
                </value>
                <value>
                    <fullName>New Item / Vintage (Copy)</fullName>
                </value>
                <value>
                    <fullName>Item Update (Copy)</fullName>
                </value>
                <value>
                    <fullName>Winery Unfinished Item</fullName>
                </value>
                <value>
                    <fullName>Winery Unfinished Item (Copy)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_am_Brand_Manager__c</fullName>
        <formula>If($User.Id =  Brand_Owner__r.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I am Brand VP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_am_Executive__c</fullName>
        <formula>If($User.Id =  Brand__r.Marketing_Executive__r.Id  ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I am Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_Competitive_Brand__c</fullName>
        <label>IIP: Identify Competitive Brand</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Mktg_Updatable__c</fullName>
        <label>Is Mktg Updatable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Active_Being_Updated__c</fullName>
        <formula>Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update From?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Created_Date__c</fullName>
        <label>IIP: Item Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Height_in_Inches__c</fullName>
        <label>IIP: Item Height (in Inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>IIP: Terlato Item Number (Long SKU)</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Pool_Code__c</fullName>
        <label>Item Pool Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Weight__c</fullName>
        <label>IIP: Item Weight (in pounds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Width_in_Inches__c</fullName>
        <label>IIP: Item Width (in Inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>What item do you want to copy from?</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipName>Item_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_designation__c</fullName>
        <label>IIP: Item designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Winery only</fullName>
                </value>
                <value>
                    <fullName>Winery &amp; Wholesale</fullName>
                </value>
                <value>
                    <fullName>Wholesale only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kits_Packs_per_Case__c</fullName>
        <description>Calculates Base Units per Case divided by Base Units per Kit/Pack</description>
        <formula>VALUE(TEXT(Base_Units_per_Case__c))/ VALUE(TEXT(Base_Units_per_Kit_Pack__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: Kits/Packs per Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Label Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label_Attached_formula__c</fullName>
        <formula>IF(Label_Front_Height_Count__c&gt;0&amp;&amp;Label_Front_Width_Count__c&gt;0, true, IF(Label_Back_Height_Count__c&gt;0&amp;&amp;Label_Back_Width_Count__c&gt;0, true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IIP: Label Attached formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label_Back_Height_Count__c</fullName>
        <label>Label Back Height Count</label>
        <summaryFilterItems>
            <field>Item_Files__c.Document_Type__c</field>
            <operation>equals</operation>
            <value>Back Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Item_Files__c.Label_Height__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Item_Files__c.Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Label_Back_Width_Count__c</fullName>
        <label>Label Back Width Count</label>
        <summaryFilterItems>
            <field>Item_Files__c.Document_Type__c</field>
            <operation>equals</operation>
            <value>Back Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Item_Files__c.Label_Width__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Item_Files__c.Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Label_Dimensions_Count__c</fullName>
        <label>IIP: Label Dimensions Count</label>
        <summaryFilterItems>
            <field>Item_Files__c.Label_Height__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Item_Files__c.Label_Width__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Item_Files__c.Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Label_Dimensions_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Label Dimensions Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label_Front_Height_Count__c</fullName>
        <label>Label Front Height Count</label>
        <summaryFilterItems>
            <field>Item_Files__c.Document_Type__c</field>
            <operation>equals</operation>
            <value>Front Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Item_Files__c.Label_Height__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Item_Files__c.Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Label_Front_Width_Count__c</fullName>
        <label>Label Front Width Count</label>
        <summaryFilterItems>
            <field>Item_Files__c.Document_Type__c</field>
            <operation>equals</operation>
            <value>Front Label</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Item_Files__c.Label_Width__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Item_Files__c.Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Layers_per_Pallet_Height__c</fullName>
        <label>IIP: Layers per Pallet (Height)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Product_Description__c</fullName>
        <description>Legal description of product. Final value is determined by value from ShipCompliant/TTB</description>
        <inlineHelpText>Legal description of product. Final value is determined by value from ShipCompliant/TTB</inlineHelpText>
        <label>IIP: Legal Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Inventory_Cost__c</fullName>
        <label>Level Inventory Cost</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Sales_Base_Price__c</fullName>
        <label>Level Sales Base Price</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Expiration_Calculation__c</fullName>
        <label>Lot Expiration Calculation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufactured_Item_Number__c</fullName>
        <description>Third Item number required for JDE and Winery specific items (JDE AITM - catalog number)</description>
        <inlineHelpText>Third Item number required for JDE and Winery specific items (JDE AITM - catalog number)</inlineHelpText>
        <label>IIP: Manufactured Item Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_CIF_New__c</fullName>
        <description>New CIF Margin is New CIF Upcharge - New Total Cost CIF</description>
        <formula>pi_uts_New_CIF_Total__c  - ci_cwc_New_Total_Cost_CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>New CIF Margin is New CIF Upcharge - New Total Cost CIF</inlineHelpText>
        <label>IIP: Margin CIF (New)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_CIF_Old__c</fullName>
        <description>Old CIF Margin is Old CIF Upcharge - Old Total Cost CIF</description>
        <formula>pi_uts_Old_CIF_Total__c  -  ci_cwc_Old_Total_Cost_CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Old CIF Margin is Old CIF Upcharge - Old Total Cost CIF</inlineHelpText>
        <label>IIP: Margin CIF (Old)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_CIF_pct_New__c</fullName>
        <description>New CIF Margin is (New CIF Price Total - New Total Cost CIF) / New CIF Price Total * 100</description>
        <formula>(( pi_uts_New_CIF_Total__c  - ci_cwc_New_Total_Cost_CIF__c) / pi_uts_New_CIF_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>New CIF Margin is (New CIF Price Total - New Total Cost CIF) / New CIF Price Total * 100</inlineHelpText>
        <label>IIP: Margin CIF % (New)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_CIF_pct_Old__c</fullName>
        <description>Old CIF Margin is (Old CIF Upcharge - Old Total Cost CIF) / Old CIF Upcharge * 100</description>
        <formula>(( pi_uts_Old_CIF_Total__c - ci_cwc_Old_Total_Cost_CIF__c )/ pi_uts_Old_CIF_Total__c ) *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Old CIF Margin is (Old CIF Upcharge - Old Total Cost CIF) / Old CIF Upcharge * 100</inlineHelpText>
        <label>IIP: Margin CIF % (Old)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Warehouse_New__c</fullName>
        <description>New Margin Warehouse is New Warehouse Total - New Total Cost Warehouse</description>
        <formula>pi_uts_New_Whse_Total__c   - ci_cwc_New_Total_Cost_Whse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>New Margin Warehouse is New Warehouse Total - New Total Cost Warehouse</inlineHelpText>
        <label>IIP: Margin Warehouse (New)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Warehouse_Old__c</fullName>
        <description>Old Margin Warehouse is Old Warehouse Total - Old Total Cost Warehouse</description>
        <formula>pi_uts_Old_Whse_Total__c -  ci_cwc_Old_Total_Cost_Whse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Old Margin Warehouse is Old Warehouse Total - Old Total Cost Warehouse</inlineHelpText>
        <label>IIP: Margin Warehouse (Old)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Warehouse_pct_New__c</fullName>
        <description>New Margin Warehouse % is (New Warehouse Total - New Total Cost Warehouse) / New Warehouse Total * 100</description>
        <formula>(( pi_uts_New_Whse_Total__c - ci_cwc_New_Total_Cost_Whse__c )/ pi_uts_New_Whse_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>New Margin Warehouse % is (New Warehouse Total - New Total Cost Warehouse) / New Warehouse Total * 100</inlineHelpText>
        <label>IIP: Margin Warehouse % (New)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Warehouse_pct_Old__c</fullName>
        <description>Old Margin Warehouse % is (Old Warehouse Total - Old Total Cost Warehouse) / Old Warehouse Total * 100</description>
        <formula>(( pi_uts_Old_Whse_Total__c -  ci_cwc_Old_Total_Cost_Whse__c )/ pi_uts_Old_Whse_Total__c )*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Old Margin Warehouse % is (Old Warehouse Total - Old Total Cost Warehouse) / Old Warehouse Total * 100</inlineHelpText>
        <label>IIP: Margin Warehouse % (Old)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marketing_Product_Description__c</fullName>
        <description>Product description as will go into JDE. Includes brand and product name. Does not include vintage.</description>
        <inlineHelpText>Product description as will go into JDE and show on invoice. Includes brand and product name. Does not include vintage.</inlineHelpText>
        <label>IIP: Marketing Product Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Product_Name__c</fullName>
        <description>Product name only, without brand or vintage information</description>
        <inlineHelpText>The &quot;name&quot; of the product only, WITHOUT the Brand name, varietal or vintage year. For example, Chimney Rock Tomahawk Vineyard Cabernet 2013, the name would be &quot;Tomahawk Vineyard&quot;.</inlineHelpText>
        <label>IIP: Marketing Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Planning_Family__c</fullName>
        <label>Master Planning Family</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NI_Days_In_Progress__c</fullName>
        <formula>IF
(
	NOT(ISBLANK( Status_Completed_Locked_Timestamp__c )),
	Status_Completed_Locked_Timestamp__c - CreatedDate,
	NOW() - CreatedDate
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NI/IU: Days In Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NI_IU_BM_Approval_to_Exec_Approval__c</fullName>
        <formula>IF
(
    NOT(ISBLANK( Brand_Mgr_Approved_Timestamp__c )),
    Exec_Approved_Timestamp__c  - Brand_Mgr_Approved_Timestamp__c,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NI/IU: BM Approval to Exec Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NI_IU_Comp_Approval_to_Oper_Approval__c</fullName>
        <formula>IF
(
    NOT(ISBLANK( Compliance_Approved_Timestamp__c )),
    Operations_Approved_Timestamp__c  - Compliance_Approved_Timestamp__c,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NI/IU: Comp Approval to Oper Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NI_IU_Exec_Approval_to_Oper_Approval__c</fullName>
        <formula>IF
(
    NOT(ISBLANK( Exec_Approved_Timestamp__c )),
    Operations_Approved_Timestamp__c  - Exec_Approved_Timestamp__c,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NI/IU: Exec Approval to Oper Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NI_IU_Oper_Approval_to_Complete_Status__c</fullName>
        <formula>IF
(
    NOT(ISBLANK( Operations_Approved_Timestamp__c )),
    Status_Completed_Locked_Timestamp__c  - Operations_Approved_Timestamp__c,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NI/IU: Oper Approval to Complete Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NI_IU_Submit_BM_to_BM_Approval__c</fullName>
        <formula>IF
(
	NOT(ISBLANK( Submit_Brand_Mgr_Timestamp__c )),
	 Brand_Mgr_Approved_Timestamp__c  - Submit_Brand_Mgr_Timestamp__c,
	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NI/IU: Submit BM to BM Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NI_IU_Submit_Comp_to_Comp_Approval__c</fullName>
        <formula>IF
(
    NOT(ISBLANK( Submit_Compliance_Timestamp__c )),
    Compliance_Approved_Timestamp__c  - Submit_Compliance_Timestamp__c,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NI/IU: Submit Comp to Comp Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_X_Rejected__c</fullName>
        <label>No. of Times Rejected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opening_Order_Days_on_Hand__c</fullName>
        <label>IIP: Opening Order Days on Hand Estimate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operations_Approval2__c</fullName>
        <formula>TEXT ( Operations__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>-Operations Approval-</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Approved_Timestamp__c</fullName>
        <label>Operations Approved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Operations_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operations Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operations Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <label>Operations Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Policy_Code__c</fullName>
        <label>Order Policy Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organic_SustainableBiodynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IIP: Organic / Sustainable/Biodynamic</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>